# SRB2

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  Android.mk  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  SRB2.cbp  SRB2_Debug.props  SRB2_Release.props  SRB2_common.props  SRB2_x86.props  Srb2.dev  alias-bootstrap.sh  appveyor.yml  comptime.bat  comptime.mk  comptime.props  comptime.sh  cpdebug.mk  debian-template.sh  debian_template.sh  readme.txt  srb2-vc10.sln  srb2-vc9.sln  tinyfontfix.pk3  vcpkg-configuration.json  vcpkg.json
assets/: .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY.txt  README.txt
assets/debian/: README.Debian  README.source  changelog  control  copyright  rules
assets/debian-template/: README.Debian  changelog  control  copyright  rules
assets/debian-template/source/: options
assets/debian/source/: options
debian/: control  (+8 more)
libs/SDL2_mixer_ext/: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CHANGES.X.txt  CMakeLists.txt  README.md  README.txt  SDL2_mixer_ext.License.txt  SDL2_mixer_ext.pc.in  SDL2_mixer_extConfig.cmake.in  version.rc
libs/SDL2_mixer_ext/.semaphore/: semaphore.yml
libs/SDL2_mixer_ext/VB6_Wrapper/: ReadME.txt  SDL_Mixer_vb6_example.clean.7z  modSDL2_mixer_ext_vb6.bas  vb6_sdl_binds.c
libs/SDL2_mixer_ext/cmake/: CppNeedCheck.cmake  DownloadAudioCodecs.cmake  DownloadSdlHg.cmake  FormatsSupported.cmake  NoPie.cmake  WhichLicense.cmake  libSDL2.cmake  (+3 more)
libs/SDLMixerX/: CHANGES.X.txt  CMakeLists.txt  COPYING.txt  README.txt  SDL2_mixer_ext.License.txt  SRB2Note.txt
libs/win-iconv/: CMakeLists.txt  ChangeLog  FindWcecompat.cmake  Makefile  iconv.def  win_iconv.c  win_iconv_test.c
src/: .gitignore  Android.mk  CMakeLists.txt  Makefile  Makefile.cfg  Sourcefile  am_map.c  am_map.h  apng.c  apng.h  asm_defs.inc  b_bot.c  b_bot.h  byteptr.h  command.c  command.h  comptime.c  config.h.in  console.c  console.h  cxxutil.hpp  d_clisrv.c  d_clisrv.h  d_datawrap.c  d_datawrap.h  d_enet.c  d_enet.h  d_event.h  d_main.c  d_main.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  d_netmobj.c  d_netmobj.h  d_player.h  d_think.h  (+268 more)
src/Makefile.d/: dedicated.mk  detect.mk  dummy.mk  features.mk  haiku.mk  nix.mk  old.mk  platform.mk  sdl.mk  util.mk  versions.mk  win32.mk
src/acs/: CMakeLists.txt  Sourcefile  acsvm.hpp  call-funcs.cpp  call-funcs.hpp  environment.cpp  environment.hpp  interface.cpp  interface.h  stream.cpp  stream.hpp  thread.cpp  thread.hpp
src/android/: README  i_cdmus.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video.c  i_video.h  jni_main.h
src/blua/: BLUA.htm  CMakeLists.txt  Makefile.cfg  Sourcefile  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldo.c  ldo.h  linit.c  liolib.c  llex.c  llex.h  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstrlib.c  ltable.c  ltable.h  ltablib.c  ltm.c  ltm.h  lua.h  luaconf.h  lualib.h  lundump.c  lundump.h  lvm.c  lvm.h
src/dedicated/: i_main.c  i_system.c  i_threads.c  i_video.c
src/djgppdos/: Makefile.cfg  bcd.c  bcd.h  i_cdmus.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video.c  internal.h  rdb-s.h  vid_vesa.c  vid_vesa.h
src/dummy/: Sourcefile  i_cdmus.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video.c
src/hardware/: CMakeLists.txt  Sourcefile  hw3dsdrv.h  hw3sound.c  hw3sound.h  hw_batching.c  hw_batching.h  hw_bsp.c  hw_cache.c  hw_clip.c  hw_clip.h  hw_data.h  hw_defs.h  hw_dll.h  hw_draw.c  hw_drv.h  hw_glide.h  hw_glob.h  hw_light.c  hw_light.h  hw_main.c  hw_main.h  hw_md2.c  hw_md2.h  hw_md2load.c  hw_md2load.h  hw_md3load.c  hw_md3load.h  hw_model.c  hw_model.h  hw_shaders.c  hw_shaders.h  hw_trick.c  hw_vertarray.c  hw_vertarray.h  hw_vertbuckets.c  hw_vertbuckets.h  hws_data.h  u_list.c  u_list.h
src/hwr2/: graphics_context.hpp  renderer.h  transfer_context.hpp
src/locale/: en.po  srb2.pot
src/nds/: Makefile.cfg  i_main.c  i_sound.c  i_system.c  i_video.c  r_nds3d.c  r_nds3d.h
src/netcode/: CMakeLists.txt  Sourcefile  client_connection.c  client_connection.h  commands.c  commands.h  d_clisrv.c  d_clisrv.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  gamestate.c  gamestate.h  http-mserv.c  i_net.h  i_tcp.c  mserv.c  mserv.h  net_command.c  net_command.h  protocol.h  server_connection.c  server_connection.h  tic_command.c  tic_command.h
src/sdl/: CMakeLists.txt  IMG_xpm.c  MakeCYG.cfg  MakeNIX.cfg  Makefile.cfg  SDL2_x64.props  SDL2_x86.props  SDL_icon.xpm  Sourcefile  Srb2SDL-vc10.vcxproj  Srb2SDL-vc10.vcxproj.filters  Srb2SDL-vc9.vcproj  Srb2SDL.dsp  Srb2SDL.props  endtxt.c  endtxt.h  hwsym_sdl.c  i_cdmus.c  i_gamepad.c  i_main.c  i_net.c  i_system.c  i_threads.c  i_ttf.c  i_ttf.h  i_video.c  i_video_hwr2.cpp  i_video_hwr2.h  load_libraries.c  load_libraries.h  mixer_sound.c  ogl_sdl.c  ogl_sdl.h  sdl_sound.c  sdlmain.h
src/sdl12/: IMG_xpm.c  MakeCYG.cfg  MakeNIX.cfg  Makefile.cfg  SDL_icon.xpm  Srb2SDL-vc10.vcxproj  Srb2SDL-vc9.vcproj  Srb2SDL.dsp  Srb2SDL.dsw  dosstr.c  endtxt.c  hwsym_sdl.c  hwsym_sdl.h  i_cdmus.c  i_main.c  i_system.c  i_ttf.c  i_ttf.h  i_video.c  mixer_sound.c  ogl_sdl.c  sdl_sound.c  sdlmain.h
src/sdl2/: MakeNIX.cfg  Makefile.cfg  SDL_icon.xpm  Srb2SDL-vc10.vcxproj  i_main.c  i_system.c  i_ttf.c  i_video.c  mixer_sound.c  ogl_sdl.c  ogl_sdl.h  sdl_sound.c
src/tests/: CMakeLists.txt  boolcompat.cpp
src/win32/: CMakeLists.txt  FMOD.props  Makefile.cfg  SRB2Win_common.props  Srb2win-vc10.vcxproj  Srb2win-vc10.vcxproj.filters  Srb2win-vc9.vcproj  Srb2win.dsp  Srb2win.dsw  Srb2win.props  Srb2win.rc  afxres.h  dx_error.c  dx_error.h  fabdxlib.c  fabdxlib.h  srb2win.exe.manifest  win_cd.c  win_dbg.c  win_dbg.h  win_dll.c  win_dll.h  win_main.c  win_main.h  win_net.c  win_snd.c  win_sys.c  win_vid.c
src/win32ce/: GameX.h  gapi_c.cpp  gapi_c.h  gxgapilib.c  gxgapilib.h  midstuff.h  resource.h  win_cd.c  win_dbg.c  win_dbg.h  win_dll.c  win_file.c  win_file.h  win_main.c  win_main.h  win_net.c  win_snd.c  win_sys.c  win_vid.c  wince_stuff.c  wince_stuff.h
(+884 files in other folders)
